@@ -3,24 +3,18 @@ Hash: SHA256
 
 DIST kstars-4.10.4.tar.xz 12413408 SHA256 902ebfc813d28af783c009ee37b9864047cab425e38af704cabf95bddd161142 SHA512 30b37acca76959b54b465acbbc9abc0eac9a2c8f261e37293b1c523a3f91ba7e0ab42ff1a5b6657c15b05e6bc36568b545645571151bddf97d3bf539339b0c87 WHIRLPOOL c8cfa6af17059d40c00efee65048e738dff1c59c4de2ca8128c22b00aeefeefcfbbdfcc08b8d01067b0899a9b3db766d8420f5e60e422d20df9fdbf1012b2cf5
 DIST kstars-4.10.5.tar.xz 12462904 SHA256 3aee28f2ee66c3daca654a55b255e395af6e04f4cc49d10220e8d6665cb2c359 SHA512 f6a4041ab5d1b938f2a358655bcffbdc1b8cc22bd44efd2dd1a00b8ee92a90348f2d51bcc43d260fbc06776947cd22bcf205e75d56c2e7e50ea86016495f4e1c WHIRLPOOL cb72be4bc36075ef0955d7cb8a60b94fe1861653af1bb484ebfc618925c1fa7df7f9ad83124893a5e7cf69c7333d3505123588cc2ffc39b42ada5a6d6a91461e
-EBUILD kstars-4.10.4.ebuild 743 SHA256 455037261221302ce5f7980a9a5f48bb62716a1a7e97e3dafa9509bbe29a3a9d SHA512 7cfb4931887caa6a8d0c9a3b3cb59c96dcd84e9dda054f309a628e07d0f8f842edd26c504c252e9c5781d959be75a643b24cda4e91e63ca700deddf6e4670a6a WHIRLPOOL c2923e2b79ffb3bc03aea16f446f8350775b03db7adc8888b92c805ce2a02d89b57c3117e7839fabb55f074c057eee92db6d39ceeefcd1205a1c60e51abba0f6
-EBUILD kstars-4.10.5.ebuild 744 SHA256 c8cb30d5577478b34195d720374df01feed824d72634274d8725dbb854d0335b SHA512 32c0cbd9279f0814cf91f93b81f15a05ac5fc373ff912d8c0cf189becd9c38bce6ccf85e9d4e19117d52d0896e987c5401ce5096686deed64a2cf70203ee6caf WHIRLPOOL 5757dbdf726ea9aab6305976aa13b2c621e7c1c2568c6eb51012e5d17059dc01c8eddab2f7bdf7425100d5f28a4a64e2565bef3e83999d3c380866391bc154ae
-MISC ChangeLog 33649 SHA256 b42f00b2bfdc3e00684e81a4a11164d68843b361fc5eb35166ac667fa5c90248 SHA512 e8aa342421929106fd6eb75c0d53e678f2e8941da728fbadd87641d511ba5bfb7063b978437e27660dd1319035b0d7bad05a5e2ad32805621769d9ca554ca83b WHIRLPOOL 55fad65a493a4eee01223ca783d79ff61b4318f137caa46a63f380fb3a6716c04e2b4ea3537fe06b23f859314beb4234c05acd153f88a39d769032b246f7685b
+EBUILD kstars-4.10.4.ebuild 826 SHA256 968ce121983e7d809482ebcc06dff6fd957468a1d3d9fb9e4ef72f81fd88b34d SHA512 3d9081c4fdd78660f112f8f9546ed3797fa50e6c62715350d2f8364ee9d077f137b184b756d1cfe335758f2a943d207937f061f6a663f81e3f04f4156d00c191 WHIRLPOOL c4d38de385cc0c934b6df67bf406ae2794d4282e36d474a232009264303fd406bd54900b2b1eff4d3889e65f73a70132700e5f6a7268266a2ff05b10b659690f
+EBUILD kstars-4.10.5.ebuild 827 SHA256 5bc88a6842ffdeb0cb92800d5f081183890a6ca23638e7400b86ddef7848ff2b SHA512 6a172bb7a8e8acb727b82dea9968db78958dd5a25a30cc1fba5bf0b2565c2dc344941fc0f89bc96b9f11dc650da50938b3d4c21b8f0a7baa224e980742309e2b WHIRLPOOL ff50eb86405f9b6e92a86c24e3144b7832eff832afdeded222a009ac303815eae821ae9d756393668f5297ed03ebed3fdc60a9a88c52fea210f9d544c93cfea6
+MISC ChangeLog 33780 SHA256 56d3b4e73adccd9c201a503528d8666effa34fdfbdee0f42338329755fb02c27 SHA512 02abe4e3642fa4bb6a67d3d52a103c2c5d527fb28e54ff246ea91cfdc7d10bd9d1e8847d32b68dfaa943c7bea6c2ec1905b7052b3007890c166218adc9528c81 WHIRLPOOL 9557fd698e9dbf46423815b33b5287991005d9c80801a578efdaa7a1d2b693feadac3cf858b12ed0450cd0390cf81752b16750353b878ee042ac780fa52b70b7
 MISC metadata.xml 340 SHA256 689195a7a93cf44147d58061940bc74b4b0a4c1b44529e70d7010cc6d1ed6e7a SHA512 a2371776990f7c60629fd24e4a72f4f3d00dd0c6a4e7bb283e506ca4aa4dcef81861fb740ae61e6964e0bece9a2c694c8edf69bbf85ed14ec98498c80fb48204 WHIRLPOOL 02eac595120392ae604b0e5a63cdf31ab7612ef1be06f8bb867bb4678f6acd1c7908c20c09694e06fee4f2553abb53ceb47b363529ee8388f9b65633a88835c3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJR95jzAAoJELp701BxlEWfBn8QAKb8pPnuXAtuCdzEp5phbuap
-J0qs4Y48jjPeKOLNql2FD1uByvLQrWxPW53xt0dKBD7q33xezV0VVIQodibehTIz
-k47HyH+Q4cQAO0SCnhRI9TpadKZWLxA9SttJkYtPYIgyGZMTYlhA+F9x+7HbwMgT
-r2P1p4txPoWRH/Ub5hPI8kuQ8Xj2RnHHkMqtssM+IX/fV8Ck6nkhyIg5bZ8TrAQ9
-rpYO6z6mPDTpls4pClJ1/ySMaD0kqyycqdflvIv7ZSWu/16cMi8cQVrNtiiDFFc1
-5J/9jWy9l8z/g8wISBu9Ho2T6Zl4petfKXE6RN6ftE2bDUFOlksOAwe+x4dkMWAf
-If3zQaXgiqcWrcviOHJSo7YHmTkPPA8jrw5QgAvmiy4DOVB+EhSo7MuMuHJh025N
-rFw3WsQWo79myHiu9B2jDii6PpO6nbBwyCIGgwr8kDeOJBkcKVZrucs3bSgfVc5z
-SmkZ4L+puWTG36DbQAZgx9dYW2RnzShHwOGlxU4NQkKOVkW7yAVh1xyuIpybiJ/h
-3kSnhHKb67nfumRMJAr0v9hkIFHzEAWd63lmx4dEgGBRID0nisvwmJf9x1coamj6
-uuEmaxiZtfDk8U3g3jMXya77ge2OuJX3u8s8RmuSR6R+9S3f8Qf7+UzpWDp1iptd
-KATAckRw7UBJ1f5Qnip5
-=9/J5
+iQEcBAEBCAAGBQJR+XwgAAoJEO+t9ga+3I3a8IoH/2vjWYwAjHX52YUOpckNvPNu
+Dt0ciDJi2Ec07EwvkOzWwMQ0MEInQXXqs6ss4z7NJ8qN4GwKd3SwWlwxD1OEAAdO
+RnNux6d6jXibz+3eCJa6JNcqzY7d0L3SBgE7yxOEglMQRuGhZPGpwy7TKRI7H78h
+75PAsxMkoo6sT0/sEwxAB26V4FW6VJKPNmNOdsHyVx4j+hLY2GGK26BOZzHnrwnf
+1AGlb4ZEcXX2ZFzQQX5q02ArueqZX7N6YJNai5nTGdcxfySMMOOiiBTx89tdRnCQ
+tZAyGHsiBmy87AB1K4Hu5FPLGh0BQpCpAtWBh43hlD+Pm155n1MJk/lrr33Pc2k=
+=9xzf
 -----END PGP SIGNATURE-----
