@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kstars/kstars-4.10.5.ebuild,v 1.4 2013/07/30 10:41:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kstars/kstars-4.10.5.ebuild,v 1.5 2013/07/31 21:05:44 johu Exp $
 
 EAPI=5
 
@@ -8,6 +8,7 @@ KDE_HANDBOOK="optional"
 inherit flag-o-matic kde4-base
 
 DESCRIPTION="KDE Desktop Planetarium"
+HOMEPAGE="http://kde.org/applications/education/kstars http://edu.kde.org/kstars"
 KEYWORDS="amd64 ~arm ppc ~ppc64 x86 ~amd64-linux ~x86-linux"
 IUSE="debug fits indi"
 
