@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kstars
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kstars/ChangeLog,v 1.287 2013/07/30 10:41:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kstars/ChangeLog,v 1.288 2013/07/31 21:05:44 johu Exp $
+
+  31 Jul 2013; Johannes Huber <johu@gentoo.org> kstars-4.10.4.ebuild,
+  kstars-4.10.5.ebuild:
+  Update HOMEPAGE wrt bug #479192.
 
   30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kstars-4.10.5.ebuild:
   Stable for ppc, wrt to bug #477634
